# spending-tracker-gui

./: .gitignore  CONTRIBUTING.md  EXECUTABLE_INFO.md  LICENSE  README.md  SimpleLaunch.cmd  SpendingTracker.cmd  SpendingTracker.pyw  SpendingTracker.vbs  create_desktop_shortcut.ps1  fix_existing_shortcut.cmd  pyproject.toml  requirements.txt  setup.cfg  spending_tracker.spec
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md  convert_icon.py  create_proper_ico.py  fix_ico_windows.py  icon_integration_example.py  simple_convert_icon.py
config/: config.yaml  config.yaml.template
data/: expenses.json
src/: main.py
src/config/: __init__.py  config_manager.py
src/controllers/: __init__.py  expense_controller.py
src/gui/: __init__.py  main_window.py  splash_screen.py  ui_utils.py
src/models/: __init__.py  budget.py  expense.py
src/services/: __init__.py  email_scheduler.py  email_service.py  google_sheets_service.py  mock_data_service.py
