[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spending-tracker-gui"
version = "1.0.0"
description = "A desktop GUI application for tracking personal spending using PySide6"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GWB2025", email = "your.email@example.com"},
]
keywords = ["expense", "tracker", "gui", "pyside6", "google-sheets", "budget"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "PySide6>=6.0.0",
    "google-auth>=2.15.0",
    "google-auth-oauthlib>=0.7.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.70.0",
    "gspread>=5.7.0",
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "python-dotenv>=0.19.0",
    "pyyaml>=6.0",
    "schedule>=1.2.0",
    "pillow>=9.0.0",
    "matplotlib>=3.6.0",
    "plotly>=5.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "pyinstaller>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/GWB2025/spending-tracker-gui"
Repository = "https://github.com/GWB2025/spending-tracker-gui"
Issues = "https://github.com/GWB2025/spending-tracker-gui/issues"

[project.scripts]
spending-tracker = "src.main:main"